--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "dependencies": {
     "bootstrap": "3",
+    "classnames": "^2.2.5",
+    "draft-js": "^0.10.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3"
   },
   "main": "main.js",
   "homepage": "./",
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
+    "babel-preset-env": "^1.3.2",
     "concurrently": "^3.4.0",
     "electron": "^1.6.2",
+    "electron-devtools-installer": "^2.1.0",
     "electron-packager": "^8.6.0",
     "enzyme": "^2.8.0",
     "eslint": "^3.19.0",
@@ -32,6 +38,8 @@
     "electron-build": "electron-packager ./ --overwrite",
     "build": "yarn react-build && yarn electron-build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   }
 }
